--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(https://fonts.google.com/share?selection.family=Roboto:ital,wght@0,100..900;1,100..900);
+body{
+    font-family: 'roboto', sans-serif;
+    margin: 0;
+    padding:0;
+    color: aliceblue
+} 
